Item371:    * working arround "table-layout:fixed" bug in firefox < 1.5      where the complete layout collapses sporadically    * minor PatternStyle layout fixes    * fixed screenshots being too large in the TWikiSkinBrowser    * some w3c validation fixes
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP@7887 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/NatSkin/pub/TWiki/NatSkin/BaseStyle.css
+++ b/twikiplugins/NatSkin/pub/TWiki/NatSkin/BaseStyle.css
@@ -457,6 +457,7 @@ h1, h2, h3, h4, h5, h6 {
 /* twiki forms */
 .natTopicForm {
   overflow:auto;
+  padding:1px; /* konqueror fix */
 }
 .natTopicForm .twikiFirstCol,
 .natTopicFormFirstCol {
